fix: (theme) the overflow `.project-title`
why: The title of portfolio doesn't fit on screen when its title is more
     than 15 characters.

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -201,7 +201,6 @@ body {
 .project-title {
     margin: 0;
 
-    font-size: 3em;
     text-decoration: underline;
 }
 
